@@ -71,6 +71,9 @@ struct v4lconvert_data {
 };
 
 
+void v4lconvert_yuv420_to_rgb24(const unsigned char *src, unsigned char *dst,
+  int width, int height);
+
 void v4lconvert_yuv420_to_bgr24(const unsigned char *src, unsigned char *dst,
   int width, int height);
 
@@ -91,6 +94,9 @@ void v4lconvert_decode_sn9c10x(const unsigned char *src, unsigned char *dst,
 
 void v4lconvert_decode_pac207(const unsigned char *src, unsigned char *dst,
   int width, int height);
+
+void v4lconvert_bayer_to_rgb24(const unsigned char *bayer,
+  unsigned char *rgb, int width, int height, unsigned int pixfmt);
 
 void v4lconvert_bayer_to_bgr24(const unsigned char *bayer,
   unsigned char *rgb, int width, int height, unsigned int pixfmt);
